--- a/.github/workflows/build-all-platforms.yml
+++ b/.github/workflows/build-all-platforms.yml
@@ -245,6 +245,16 @@ jobs:
         working-directory: windows
         run: cmake --build build --config Release
 
+      - name: Upload Windows build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: windows-build
+          path: |
+            windows/build/*.exe
+            windows/build/*.dll
+            windows/ui_test.sh
+          if-no-files-found: error
+
 
 
   # ============================================================================
@@ -379,12 +389,49 @@ jobs:
 
 
   # ============================================================================
+  # WINDOWS UI TEST (GPU RUNNER)
+  #
+  # Note: Only runs if all other builds pass, to avoid wasted compute spend
+  # ============================================================================
+  windows-ui-test:
+    name: Windows UI Test
+    runs-on: windows-latest-gpu
+    needs: [android, linux, windows, macos, ios]
+    if: success()
+
+    defaults:
+      run:
+        shell: bash
+
+    steps:
+      - name: Download Windows build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: windows-build
+
+      - name: Run UI tests
+        run: |
+          chmod +x ui_test.sh
+          chmod +x build/acidwarp-windows.exe
+          ./ui_test.sh
+
+      - name: Upload screenshots
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: windows-ui-test-screenshots
+          path: screenshots/*.png
+          if-no-files-found: error
+
+
+
+  # ============================================================================
   # BUILD SUMMARY
   # ============================================================================
   build-summary:
     name: Build Summary
     runs-on: ubuntu-latest
-    needs: [android, linux, windows, macos, ios]
+    needs: [android, linux, windows, macos, ios, windows-ui-test]
     if: always()
 
     steps:
@@ -392,18 +439,20 @@ jobs:
         run: |
           echo "Build Summary:"
           echo "============================================"
-          echo "Android: ${{ needs.android.result }}"
-          echo "Linux:   ${{ needs.linux.result }}"
-          echo "Windows: ${{ needs.windows.result }}"
-          echo "macOS:   ${{ needs.macos.result }}"
-          echo "iOS:     ${{ needs.ios.result }}"
+          echo "Android:         ${{ needs.android.result }}"
+          echo "Linux:           ${{ needs.linux.result }}"
+          echo "Windows:         ${{ needs.windows.result }}"
+          echo "macOS:           ${{ needs.macos.result }}"
+          echo "iOS:             ${{ needs.ios.result }}"
+          echo "Windows UI Test: ${{ needs.windows-ui-test.result }}"
           echo "============================================"
 
           if [[ "${{ needs.android.result }}" == "failure" ]] || \
              [[ "${{ needs.linux.result }}" == "failure" ]] || \
              [[ "${{ needs.windows.result }}" == "failure" ]] || \
              [[ "${{ needs.macos.result }}" == "failure" ]] || \
-             [[ "${{ needs.ios.result }}" == "failure" ]]; then
+             [[ "${{ needs.ios.result }}" == "failure" ]] || \
+             [[ "${{ needs.windows-ui-test.result }}" == "failure" ]]; then
             echo "? One or more builds failed"
             exit 1
           else
