--- a/.github/workflows/build-all-platforms.yml
+++ b/.github/workflows/build-all-platforms.yml
@@ -221,8 +221,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          symlinks: true
 
       - name: Setup MSYS2
         uses: msys2/setup-msys2@v2
@@ -395,9 +393,10 @@ jobs:
   # ============================================================================
   windows-ui-test:
     name: Windows UI Test
-    runs-on: windows-latest-gpu
+    runs-on: windows-x64-2025-gpu
     needs: [android, linux, windows, macos, ios]
     if: success()
+    environment: gpu-testing
 
     defaults:
       run:
