--- a/.github/workflows/build-all-platforms.yml
+++ b/.github/workflows/build-all-platforms.yml
@@ -298,12 +298,6 @@ jobs:
           path: macos/screenshots/*.png
           if-no-files-found: error
 
-      - name: Create macOS app archive
-        working-directory: macos
-        run: |
-          cd build/Build/Products/Release
-          zip -r ../../../../acidwarp-macos.zip "Acid Warp.app"
-
 
 
   # ============================================================================
@@ -320,25 +314,7 @@ jobs:
       - name: Select Xcode version
         run: sudo xcode-select -s /Applications/Xcode.app/Contents/Developer
 
-      - name: Build iOS app
-        working-directory: ios
-        run: |
-          xcodebuild -project acidwarp-ios.xcodeproj \
-            -scheme acidwarp \
-            -configuration Release \
-            -sdk iphoneos \
-            -derivedDataPath ./build \
-            CODE_SIGN_IDENTITY="" \
-            CODE_SIGNING_REQUIRED=NO \
-            CODE_SIGNING_ALLOWED=NO
-
-      - name: Create iOS app archive
-        working-directory: ios
-        run: |
-          cd build/Build/Products/Release-iphoneos
-          zip -r ../../../../acidwarp-ios.zip acidwarp.app
-
-      - name: Run UI tests
+      - name: Build app and run UI tests
         working-directory: ios
         timeout-minutes: 20
         run: |
