--- a/.github/workflows/build-all-platforms.yml
+++ b/.github/workflows/build-all-platforms.yml
@@ -359,6 +359,48 @@ jobs:
         with:
           name: windows-build
 
+      - name: Install GPU drivers
+        run: |
+          Write-Host "Checking GPU information..."
+          Get-WmiObject Win32_VideoController | Select-Object Name, DriverVersion, DriverDate, Status | Format-List
+          
+          # Check if this is an NVIDIA GPU
+          $gpu = Get-WmiObject Win32_VideoController | Where-Object { $_.Name -like "*NVIDIA*" -or $_.Name -like "*Tesla*" }
+          
+          if ($gpu) {
+            Write-Host "NVIDIA GPU detected: $($gpu.Name)"
+            Write-Host "Installing NVIDIA GPU drivers..."
+            
+            # Download and install NVIDIA drivers (using Grid drivers for datacenter GPUs)
+            # For Azure NC-series VMs with Tesla GPUs, use the datacenter/GRID driver
+            $nvidiaUrl = "https://download.microsoft.com/download/9/3/4/9340b7f1-aa10-4e14-9f85-3d94c0920c16/537.13_grid_win10_win11_server2019_server2022_dch_64bit_international.exe"
+            $installerPath = "$env:TEMP\nvidia-driver.exe"
+            
+            Write-Host "Downloading NVIDIA driver..."
+            Invoke-WebRequest -Uri $nvidiaUrl -OutFile $installerPath -UseBasicParsing
+            
+            Write-Host "Installing NVIDIA driver (this may take several minutes)..."
+            Start-Process -FilePath $installerPath -ArgumentList "/s", "/noreboot", "/noeula" -Wait -NoNewWindow
+            
+            Write-Host "NVIDIA driver installation completed"
+          } else {
+            Write-Host "No NVIDIA GPU detected, checking for other GPUs..."
+            $allGpus = Get-WmiObject Win32_VideoController
+            foreach ($g in $allGpus) {
+              Write-Host "GPU: $($g.Name)"
+            }
+            
+            # Try to update all GPU drivers using Windows Update
+            Write-Host "Attempting to install drivers via Windows Update..."
+            Install-PackageProvider -Name NuGet -MinimumVersion 2.8.5.201 -Force -ErrorAction SilentlyContinue
+            Install-Module PSWindowsUpdate -Force -ErrorAction SilentlyContinue
+            Import-Module PSWindowsUpdate -ErrorAction SilentlyContinue
+            Get-WindowsUpdate -Install -AcceptAll -IgnoreReboot -ErrorAction SilentlyContinue
+          }
+          
+          Write-Host "Verifying GPU status after driver installation..."
+          Get-WmiObject Win32_VideoController | Select-Object Name, DriverVersion, DriverDate, Status | Format-List
+
       - name: Run UI tests
         run: .\ui_test.ps1
 
